--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-ip": "^1.0.3",
     "http-errors": "~1.6.3",
+    "ip": "^1.1.5",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
