--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "ip": "^1.1.5",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "morgan": "~1.9.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "node-code-generator": "^1.0.3"
   }
 }
